# plotastrodata

./: .flake8  .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  environment.yml  example.ipynb  example.py  example2.py  example_advanced.py  example_fitting.py  fits_utils.py  other_utils.py  setup.cfg  test2D_2.fits  test2Dang.fits  test_plotastrodata.py
.github/workflows/: python-package-conda.yml
data/: test2Dang.fits
docs/: conf.py  example.ipynb  index.rst  manual.rst  modules.rst  plotastrodata.rst  requirements.txt
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  plotastrodata.html  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  plotastrodata.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/plotastrodata/: analysis_utils.html  coord_utils.html  ext_utils.html  fft_utils.html  fits_utils.html  fitting_utils.html  los_utils.html  matrix_utils.html  other_utils.html  plot_utils.html
docs/_build/_sources/: index.rst.txt  plotastrodata.rst.txt
docs/_static/data/: test2D.fits  testPV.fits
docs/examples/: 3Dhtml_embed.rst  animation_embed.rst  example.ipynb  example_3Dhtml.ipynb  example_animation.ipynb  example_embed.rst  hello.rst  index.rst  test3D_embed.rst
docs/examples/advanced/: 3Dhtml_embed.rst  animation_embed.rst  example_3Dhtml.ipynb  example_animation.ipynb  index.rst
docs/jupyter_execute/examples/: example.ipynb
exampleFITS/: testB.fits  testG.fits
example_data/: test2D_2.fits
old/: __init__.py  example.py  fits_utils.py  lineprofiles.py  other_utils.py
old/plotastrodata/: channels.py
plotastrodata/: __init__.py  analysis_utils.py  channels.py  const_utils.py  coord_utils.py  ext_utils.py  fft_utils.py  fits_utils.py  fitting_utils.py  html_utils.py  images.py  los_utils.py  matrix_utils.py  momentmaps.py  noise_utils.py  other_utils.py  plot_utils.py  pvdiagrams.py  settings.py
plotradiodata/: aplpycustom.py  images.py  lineprofiles.py  momentmaps.py  rgb_images.py
testFITS/: test2D.fits  test2Damp.fits  test3D.fits  testB.fits  testG.fits  testR.fits
tests/: test_analysis_utils.py  test_fft_utils.py  test_fits_utils.py  test_fitting_utils.py  test_los_utils.py  test_other_utils.py  test_plot_utils.py
