[metadata]
name = plotastrodata
author = yusukeaso-astron
version = attr: plotastrodata.__version__
description = plotastrodata can be used mainly to make figures from FITS files, as well as other analyses in astronomy.
long_description = file: README.md
keywords = astronomy, FITS, plot
license = GNU General Public License Version 3
url = https://github.com/yusukeaso-astron/plotastrodata
download_url = https://github.com/yusukeaso-astron/plotastrodata
classifiers = Programming Language :: Python :: 3


[options]
packages = plotastrodata
zip_safe = False
include_packge_data = True
python_requires = >=3.10
install_requires = 
    astropy
    corner
    dynesty
    ffmpeg
    matplotlib
    multiprocessing
    numpy
    pillow
    plotly
    ptemcee
    scipy
    skiage
    tqdm
