[metadata]
name = plotastrodata
author = yusukeaso-astron
version = attr: plotastrodata.__version__
description = plotastrodata is a tool for astronomers to create figures from FITS files and perform fundamental data analyses with ease.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, FITS, plot
license = GNU General Public License Version 3
url = https://github.com/yusukeaso-astron/plotastrodata
download_url = https://github.com/yusukeaso-astron/plotastrodata
classifiers = Programming Language :: Python :: 3


[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires = 
    astropy
    corner
    dynesty
    emcee
    matplotlib
    multiprocess
    numpy >= 2.0
    pillow
    plotly
    ptemcee
    scikit-image
    scipy
    tqdm

[options.packages.find]
include =
    plotastrodata
    plotastrodata.*

[options.package_data]
plotastrodata =
    data/*.fits